# kommando

./: .gitignore  LICENSE  README.md
docs/: COPY_MAP.md  INSTALL.md
firmware/: .cproject  .project  CMakeLists.txt  Kconfig.projbuild  easyeda.json  sdkconfig
firmware/archive/: button.c  esp_zigbee_app.c  esp_zigbee_app.h  lcd_demo.c  lcd_demo.h
firmware/main/: CMakeLists.txt  backlight.c  backlight.h  button.c  button.h  commands.c  commands.h  config.h  display.c  display.h  idf_component.yml  led.c  led.h  main.c  main.h  tiles.c  tiles.h  ui_panel.c  ui_panel.h  zigbee.c  zigbee.h
firmware/partition_table/: partition-table.csv
home-assistant-blueprint/: kommando_panel.yaml
ki-kad/kommando/: kommando.kicad_prl  kommando.kicad_pro  kommando.kicad_sch
z2m-converter/: kommando_nano.js
