idf_component_register(
    SRCS
        "main.c"
        "backlight.c"
        "tiles.c"
        "commands.c"
        "display.c"
        "ui_panel.c"
        "zigbee.c"
        "led.c"
        "button.c"
    INCLUDE_DIRS "."
    REQUIRES
        esp_timer
        driver
        led_strip
        nvs_flash
        esp_lcd
        esp_driver_spi
        esp_driver_i2c
        esp_driver_gpio
        esp_driver_ledc
    PRIV_REQUIRES
        nvs_flash
        esp_driver_uart
        ieee802154
)
